--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,19 @@ body {
     background-color: yellow;
 }
 
+.circle {
+    width: 100px;
+	height: 100px;
+	background: grey;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+}
+
+.triangle {
+    width: 0;
+	height: 0;
+	border-left: 50px solid transparent;
+	border-right: 50px solid transparent;
+	border-bottom: 100px solid blue;
+}
