--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,12 @@ body {
 	height: 50px;
 	background: purple;
 }
+
+.parallelogram {
+    width: 150px;
+	height: 100px;
+	-webkit-transform: skew(20deg);
+	   -moz-transform: skew(20deg);
+	     -o-transform: skew(20deg);
+	background: green;
+}
