--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,15 @@ body {
     background-color: yellow;
 }
 
+div {
+    margin: 15px;
+    display: inline-block;
+    text-align: center;
+}
+p {
+    padding-top: 80px;
+}
+
 .circle {
     width: 100px;
 	height: 100px;
@@ -26,8 +35,8 @@ body {
 }
 
 .rectangle {
-    width: 100px;
-	height: 50px;
+    width: 150px;
+	height: 100px;
 	background: purple;
 }
 
